--- a/style.css
+++ b/style.css
@@ -294,3 +294,12 @@ footer {
 }
 
 
+.profile-pic {
+  width: 150px; 
+  align-items: center;
+  height: 150px;
+  border-radius: 50%;         /* makes it a circle */
+  background: url('image1.png') center/cover no-repeat; /* your image */
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2); /* optional shadow */
+}
+
