--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(to bottom right, #86CEFA, #000435);
+    background: linear-gradient(to bottom right, #000435, #000435);
     color: white;
     font-family: "Helvetica", "Courier New", sans-serif;
     text-align: center;
